--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hello World</title>
+    <title>Hello Universe</title>
 </head>
 <body>
-    
+    <h1>Hello Sun!</h1>
+    <h2>Hello Earth!</h2>
+    <h3>Hello Moon!</h3>
 </body>
 </html>
